--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy HTML site to Azure Static Web Apps
 on:
   push:
     branches:
-      - main  # Or the default branch you use
+      - main
 
 jobs:
   deploy:
@@ -18,6 +18,6 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: "upload"
-          app_location: "/"        # root folder of your HTML files
-          output_location: ""      # leave blank since there's no build
+          app_location: "/"       
+          output_location: ""
 
